@@ -13,6 +13,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (5.1-dev, SVN trunk):
 -------------------------------------
 
+- mapwfs.c: return default GML2 when invalid OUTPUTFORMAT passed (#2479)
+
 - mapowscommon.c: add OWS Common style version negotiation (#996)
 
 - mapwcs.c: better section parameter handling for CITE (#2485)
